# xeus-ruby

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment.yml  pixi.toml  xeus-rubyConfig.cmake.in
.github/workflows/: main.yml
cmake/: FindRice.cmake  FindRuby.cmake
docs/: Doxyfile  conf.py  environment.yml  index.rst
docs/source/: conf.py  dev-build-options.rst  index.rst  usage.rst
include/xeus-ruby/: xeus_ruby_config.hpp  xinterpreter.hpp  xutils.hpp
notebooks/: xeus-ruby.ipynb
share/jupyter/kernels/xruby/: kernel.json.in
src/: main.cpp  main_emscripten_kernel.cpp  xinterpreter.cpp  xutils.cpp
test/: test_xruby_kernel.py
